<resources>

    <string name="app_name">Weather</string>
    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="item1">Moscow</string>
    <string name="item2">Novgorod</string>
    <string name="item3">Novosibirsk</string>
    <string name="item4">Vladivostok</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="writeCity">Выбрать город</string>
    <string name="goWeatherActivity">Узнать погоду</string>
    <string name="changed_city">Выбранный город</string>
    <string name="date_weather">Дата погоды</string>
    <string name="weather_picture">Иконка погоды)</string>
    <string name="pow_weather">pressure: %1$s mm</string>
    <string name="water_weather">humidity: %1$s %%</string>
    <string name="wind_weather">wind: %1$s m/s</string>
    <string name="fa_snowflake_o">\uf2dc</string>
    <string name="known_weather">Узнать погоду</string>
    <string name="todo">rrr</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Development: Alex Kostrov</string>
    <string name="nav_header_subtitle">alexanderssen@mail.ru</string>
    <string name="temp">%1$s °C</string>
    <string name="enter_city">Введите город</string>

</resources>
