<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/item1">
    </item>
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/item2"
        tools:ignore="AppCompatResource">
    </item>
    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/item3"
        tools:ignore="AppCompatResource">
    </item>
    <item
        android:id="@+id/item4"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/item4"
        tools:ignore="AppCompatResource">
    </item>
</menu>